--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,62 @@
-canvas{
-  /* border: 1px solid red; */
+body{
+  margin: 0;
+  position: relative;
+  width: 100%;
+  /* background-image: url('../images/bg-0.jpg');
+  background-size: cover; */
+  background-color: azure;
+}
+
+.container {
+  width: 1092px;
   margin: 0 auto;
 }
 
-body{
+.game-intro img {
+  position: absolute;
+  top: 100px;
+  left: 500px;
+  z-index: 99;
+}
+
+.game-intro, .canvas-container, .white{
+  float: left;
   text-align: center;
+  position: relative;
+}
+
+.white{
+  width: 20%;
+  padding-top: 300px;
+  position: relative;
+}
+
+.game-intro{
+  width: 20%;
+  padding-top: 410px;
+  position: relative;
+}
+
+.canvas-container {
+  margin: 0;
+  background-image: url('../images/screenshot.png');
+  background-position-x: center;
+  background-size: 512px 800px;
+  background-repeat: no-repeat;
+  width: 60%;
+}
+
+canvas{
+  margin: 0 auto;
+}
+
+
+button {
+  font-size: 40px;
+  background-color: #2d0068;
+  color: #fff;
+  padding: 20px 40px;
+  border: 0;
+  box-shadow: 0;
+  border-radius: 5px;
 }
