--- a/css/styles.css
+++ b/css/styles.css
@@ -2,14 +2,42 @@ body{
   margin: 0;
   position: relative;
   width: 100%;
-  /* background-image: url('../images/bg-0.jpg');
-  background-size: cover; */
   background-color: azure;
+}
+
+.container-main {
+  background-image: url('../images/bg-website.jpg');
+  background-position-x: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+#try-button {
+  display: block;
+  width: 50%;
+  margin: 0 auto;
+  height: 50px;
+}
+.logo-container {
+  background-color: rgba(255,255,255,0.8);
+  text-align: center;
+}
+
+.logo-img {
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 100px;
+}
+
+.bird {
+  width: 15%;
+  height: auto;
 }
 
 .container {
   width: 1092px;
   margin: 0 auto;
+  text-align: center;
+  height: 100vh;
 }
 
 .game-intro img {
@@ -39,7 +67,7 @@ body{
 
 .canvas-container {
   margin: 0;
-  background-image: url('../images/screenshot.png');
+  background-image: url('../images/screenshot-2.png');
   background-position-x: center;
   background-size: 512px 800px;
   background-repeat: no-repeat;
@@ -51,7 +79,7 @@ canvas{
 }
 
 
-button {
+button, .button {
   font-size: 40px;
   background-color: #2d0068;
   color: #fff;
@@ -59,4 +87,11 @@ button {
   border: 0;
   box-shadow: 0;
   border-radius: 5px;
+}
+
+.try-button {
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  text-decoration: none;
 }
